# PythonProject

./: companies.py  config.py  employees.py  main.py  pyproject.toml  requirements.txt  users.py
.github/workflows/: run-tests.yml
api/: base.py  company.py  employee.py  structure.py  token.py  user.py
tests/: conftest.py  test_api.py  test_company.py  test_employee.py  test_token.py  test_user.py
